fixed horizontal scroll issue

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -22,6 +22,7 @@
 
 #main-navbar {
     background-color: $navbar-background;
+    max-width: 100%;
 }
 
 #main-wrapper{
